cabal-version: >= 1.10

name:                nuha
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Johannes Kropp
maintainer:          jodak932@gmail.com
copyright:           (c) Johannes Kropp 2020
category:            Math
synopsis:            linear algebra and numerical computing
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
    exposed-modules:
        Math.Nuha
        Math.Nuha.Types
        Math.Nuha.Instances
        Math.Nuha.Base
        Math.Nuha.Numeric
        Math.Nuha.Algorithms
        Math.Nuha.Internal
    hs-source-dirs:
        src
    build-depends:
        base         >= 4.13.0 && < 4.14
       ,vector       >= 0.12.1 && < 0.13

test-suite nuha-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        Math.NuhaTest
    hs-source-dirs:
        test
    build-depends:
        nuha
       ,base         >= 4.13.0 && < 4.14
       ,vector       >= 0.12.1 && < 0.13
       ,clock
