name:                nuha
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Johannes Kropp
maintainer:          jodak932@gmail.com
copyright:           (c) Johannes Kropp 2020
cabal-version:       >= 1.10
build-type:          Simple
category:            Math, Numeric
synopsis:            Multidimensional arrays, Linear algebra
description:         A library for linear algebra based on multidimensional arrays

extra-source-files:
    CHANGELOG.md
    README.md

source-repository head
    type:       git
    location:   https://github.com/jdkr/nuha

library
    default-language:    Haskell2010
    exposed-modules:
        Math.Nuha
        Math.Nuha.Types
        Math.Nuha.Instances
        Math.Nuha.Base
        Math.Nuha.Numeric
        Math.Nuha.Algorithms
        Math.Nuha.Internal
    hs-source-dirs:
        src
    build-depends:
        base        >= 4.13.0 && < 4.14
       ,vector      >= 0.12.1 && < 0.13

test-suite nuha-test
    default-language:    Haskell2010
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        Math.NuhaTest
    hs-source-dirs:
        test
    build-depends:
        nuha
       ,base        >= 4.13.0 && < 4.14
       ,vector      >= 0.12.1 && < 0.13
       ,clock
